<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/bg_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/pg_landing"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="100dp"
            android:layout_marginRight="32dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/caption_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="5.6sp"
                android:text="@string/landing_caption_one"
                android:textColor="#ffffff"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/caption_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:lineSpacingExtra="5.6sp"
                android:text="@string/landing_caption_two"
                android:textColor="#ffffff"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/landing_btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:background="@drawable/rounded_corner_with_border"
                android:text="@string/btn_login"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="20dp" />

            <Button
                android:id="@+id/landing_btn_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_marginTop="20dip"
                android:background="@drawable/rounded_corner"
                android:text="@string/btn_signup"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="20dp" />
        </LinearLayout>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>