<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_margin="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/edit_profile_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="5.6sp"
                android:text="@string/edit_profile_title"
                android:textColor="@color/colorPrimary"
                android:textSize="30sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_margin="5dp"
                android:scaleType="centerCrop"
                android:src="@drawable/profile_edit_bg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


            <EditText
                android:id="@+id/profile_edit_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_edit_text_dark"
                android:hint="@string/enter_your_first_name"
                android:inputType="text"
                android:maxLength="30"
                android:padding="15dp"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary" />

            <EditText
                android:id="@+id/profile_edit_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_edit_text_dark"
                android:hint="@string/enter_your_last_name"
                android:inputType="text"
                android:maxLength="30"
                android:padding="15dp"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary" />

            <Button
                android:id="@+id/btn_edit_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dip"
                android:background="@drawable/rounded_corner"
                android:text="@string/btn_update"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="20dp" />
        </LinearLayout>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>